# dii

./: .env.example  README.md  pyproject.toml
apps/api/: alerts.py  beliefs.py  main.py  portfolio.py  suggestions.py
core/: alert_builder.py  alerts.py  belief_engine.py  belief_store.py  beliefs.py  events.py  portfolio_store.py  proposal_store.py  proposals.py  signals.py  suggestion_builder.py  suggestions.py
core/agents/: base.py  capital_markets.py
db/migrations/: 001_initial_schema.sql
dii.egg-info/: SOURCES.txt  requires.txt
