[project]
name = "dii"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "psycopg2-binary",
    "PyPDF2",
    "pandas",
]

[tool.setuptools]
packages = ["apps"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

